--- a/drone/drone.yml
+++ b/drone/drone.yml
@@ -34,6 +34,23 @@ services:
         constraints:
           - node.labels.location == home
 
+  drone-wall:
+    image: drone/drone-wall
+    restart: always
+    ports:
+      - "80"
+    networks:
+      - default
+      - traefik-net
+    deploy:
+      placement:
+        constraints:
+          - node.labels.location == home
+      labels:
+        - "traefik.port=80"
+        - "traefik.docker.network=traefik-net"
+        - "traefik.frontend.rule=Host:drone-wall.fredix.xyz"
+
 networks:
   traefik-net:
     external: true
