--- a/drone/.env.production-agent.sample
+++ b/drone/.env.production-agent.sample
@@ -1,2 +1,4 @@
-DRONE_SERVER=ws://drone-server:8000/ws/broker
+DRONE_TIMEOUT=10m
+DRONE_MAX_PROCS=3
+DRONE_SERVER=drone-server:9000
 DRONE_SECRET=passdroneachanger
