--- a/drone/.env.production-server.sample
+++ b/drone/.env.production-server.sample
@@ -6,3 +6,4 @@ DRONE_GITHUB=true
 DRONE_GITHUB_CLIENT=tokengithub
 DRONE_GITHUB_SECRET=secretgithub
 DRONE_SECRET=dronesecretidemagent
+GIN_MODE=release
