update drone env files

--- a/drone/.env.production-server.sample
+++ b/drone/.env.production-server.sample
@@ -7,3 +7,4 @@ DRONE_GITHUB_CLIENT=tokengithub
 DRONE_GITHUB_SECRET=secretgithub
 DRONE_SECRET=dronesecretidemagent
 GIN_MODE=release
+DRONE_DEBUG=true
