--- a/drone/.env.production-agent.sample
+++ b/drone/.env.production-agent.sample
@@ -2,3 +2,8 @@ DRONE_TIMEOUT=10m
 DRONE_MAX_PROCS=3
 DRONE_SERVER=drone-server:9000
 DRONE_SECRET=passdroneachanger
+DOCKER_OS=linux
+DOCKER_ARCH=arm64
+DRONE_PLATFORM=linux/arm64
+DRONE_DEBUG=true
+DRONE_DEBUG_PRETTY=true
